# tsne

./: .coveragerc  .env  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.txt  RELEASE.md  conda_build_config.yaml  environment.yml  meta.yaml  pyproject.toml  requirements-dev.txt  requirements-package.txt  requirements.txt  setup.cfg  setup.py  test.py  versioneer.py
.github/workflows/: test.yml
examples/: iris.ipynb  mnist.ipynb
fasttsne/: __init__.py  compile_linux  setup.py  tsne.h
fasttsne/orig-lvdm/: compile_mac
py_bh_tsne/: Makefile  Readme.txt  __init__.py  py_bh_tsne.cpp  py_bh_tsne.pyx  setup.py  tsne.cpp
tsne/: Makefile  __init__.py  _bh_sne.py  _version.py  bh_sne.cpp  bh_sne.pyx  setup.py
tsne/bh_sne_src/: quadtree.cpp  quadtree.h  tsne.cpp  tsne.h  vptree.h
tsne/includes/bh_tsne/: LICENSE  Readme.txt  fast_tsne.m  quadtree.h  tsne.cpp  tsne.h
tsne/tests/: test_import.py  test_iris.py  test_seed.py
