[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
    "cython >= 0.29",
    "numpy==1.14.5; python_version<'3.7'",
    "numpy==1.16.0; python_version>='3.7'",
]

[tool.setuptools_scm]
write_to = "tsne/_generated_version.py"

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''
