[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
    "cython >= 0.29",
    "numpy==1.14.5; python_version<'3.7'",
    "numpy==1.16.0; python_version>='3.7'",
]

[tool.coverage.run]
parallel = true
branch = true
plugins = ["Cython.Coverage"]

[tool.coverage.report]
omit = ["tsne/_generated_version.py", "tsne/tests/*"]

[tool.setuptools_scm]
write_to = "tsne/_generated_version.py"

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines
multi_line_output=3
lines_after_imports = 2
force_grid_wrap = 0
include_trailing_comma = "true"
use_parentheses = "true"
line_length = 88
